# CringeMessenger

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
include/glad/: glad.h
src/: glad.c  main.cpp
src/Window/: Events.cpp  Events.hpp  GUI.hpp  Window.cpp  Window.hpp
